[package]
name = "octolog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async fn's in traits
async-trait = "*"

# Tokio
tokio = { version = "^1", features = ["full"] }
tokio-util = { version = "^0.6", features = ["codec"] }

# Futures and Streams
futures = { version = "^0.3", features = ["io-compat"] } # io-compat just to try and pull in more from futures

# Errors
anyhow = "^1"
thiserror = "^1"

# Basic Serialization
serde = "^1"
serde_json = "^1"

# Kafka
rdkafka = "^0.26"

# AWS Types
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-config" }
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-types" }
smithy-http = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "smithy-http" }

# AWS Services
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-sdk-s3" }
aws-sdk-sqs = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-sdk-sqs" }
aws-sdk-sns = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-sdk-sns" }